resolved issue with stretched images

--- a/sites/all/themes/iconlabs/sass/components/view_modes/_node_partners_teaser.scss
+++ b/sites/all/themes/iconlabs/sass/components/view_modes/_node_partners_teaser.scss
@@ -4,6 +4,7 @@
 
     img {
       max-height: 45px;
+      width: auto;
     }
   }
 }
